--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.3",
+    "@langchain/openai": "^0.0.12",
     "@prisma/client": "^5.8.1",
+    "langchain": "^0.1.4",
     "next": "14.0.4",
     "react": "^18",
+    "react-autosave": "^0.4.4",
     "react-dom": "^18"
   },
   "devDependencies": {
